table ajout carte responsive

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -400,6 +400,28 @@ h2 {
       display: inline;
     }
 
+
+
+    .table thead {
+      display: none;
+      }
+      
+      .table tr{
+      display: block;
+      /* margin-bottom: 40px; */
+      }
+      
+      .table td {
+      display: block;
+      /* text-align: right; */
+      }
+
+      .table td:before {
+        content: attr(data-label);
+        float: left;
+        font-weight: bold;
+        }
+
     
 
 }
