--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,11 +6,12 @@
 
 
 body {
-  background-image: url( '../img/protruding-squares.svg' );
+  /* background-image: url( '../img/protruding-squares.svg' ); */
+  background-color: white;
 }
 
 header {
-  background-color: #cacaca;
+  background-color: #22252a;
 }
 
 h1 {
@@ -32,25 +33,34 @@ h2 {
 }
 
 #logo{
-  height: 100px;
-  width: 180px;
-  margin: 15px;
+  height: 90px;
+  width: 130px;
+  margin: 0px;
   border-radius: 20px;
 }
+
+
+#wrapper{
+  max-width: 1300px;
+  margin: auto;
+  background-color: rgb(255, 255, 255);
+  padding: 20px 0;
+}
+
 
 #container{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  gap: 50px;
-  margin: 50px 0;
+  gap: 30px;
+  margin: 0 0;
 }
 
 #play-deck-zone{
   background-color: #d3d3d386;
   backdrop-filter: blur(7px);
-  width: 850px;
+  width: 750px;
   text-align: center;
   padding: 20px;
   margin: 0 20px;
@@ -62,7 +72,7 @@ h2 {
     display: flex;
     flex-direction: column;
     margin: 0px;
-    padding: 20px;
+    padding: 20px 0;
   }
   
   #play-deck-zone .tab-buttons {
@@ -360,10 +370,9 @@ h2 {
   }
 
 
-
-
-  .item-deck.tree-1{
+  #container-item-deck{
     background-color: #ffffff;
+    border-radius: 10px;
     border: 1px solid #000000 ;
     margin: 5px;
     padding: 5px;
@@ -392,10 +401,13 @@ h2 {
   }
 
   .item-deck{
-    flex: auto;
+    flex-basis: calc(50% - 10px);
   }
 
 
+  #play-deck-zone .tab-button span {
+    font-size: 15px;
+  }
 
   @media screen and (max-width: 900px){
     
