--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,7 +44,7 @@ h2 {
   max-width: 1300px;
   margin: auto;
   background-color: rgb(255, 255, 255);
-  padding: 20px 0;
+  padding: 30px 30px;
 }
 
 
@@ -61,9 +61,10 @@ h2 {
   background-color: #d3d3d386;
   backdrop-filter: blur(7px);
   width: 750px;
+  flex: 1 1 750px;
   text-align: center;
   padding: 20px;
-  margin: 0 20px;
+  margin: 0 0;
   border-radius: 30px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
@@ -107,7 +108,7 @@ h2 {
   
   #play-deck-zone .tab-button.active {
     /* background-color: #fff; */
-    border: 1px solid #ccc;
+    border: 1px solid #e7e7e7;
     border-bottom: none;
   }
   
@@ -142,6 +143,19 @@ h2 {
     max-width: 270px;
   }
 
+  #select-deck-zone{
+    width: 750px;
+    display: inline-block;
+    flex: 1 1 450px;
+    /* flex-basis: 40%; */
+    /* max-width: 750px; */
+  }
+
+  #container>* {
+    
+  }
+
+
 
   #select-deck-zone .tab-buttons {
     display: flex;
@@ -168,8 +182,9 @@ h2 {
   
   #select-deck-zone .container-tab-contents {
     padding: 10px;
-    border-radius: 0 25px 25px 25px;
-    background-color: #ccc;
+    background-color: #e8e8e8;
+    height: 700px;
+    overflow-y: scroll;
   }
   
   #select-deck-zone .tab-content {
@@ -370,10 +385,10 @@ h2 {
   }
 
 
-  #container-item-deck{
+  .container-item-deck{
     background-color: #ffffff;
     border-radius: 10px;
-    border: 1px solid #000000 ;
+    border: 2px solid #000000 ;
     margin: 5px;
     padding: 5px;
   }
@@ -400,8 +415,8 @@ h2 {
     flex-wrap: wrap;
   }
 
-  .item-deck{
-    flex-basis: calc(50% - 10px);
+  .container-item-deck{
+    flex: 1 1 calc(50% - 10px);
   }
 
 
