--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
 
 
 
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <nav class="navbar navbar-expand-lg navbar-light bg-info">
                     <a class="navbar-brand" href="#"><img id="logo" src="{{ asset('img/logo.png') }}" alt="logo flashcards"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
@@ -72,7 +72,7 @@
                                 </div>
                             </li>
                             {% if is_granted('ROLE_ADMIN') %}
-                                <li class="nav-item btn btn-dark px-3"><a href="">Panneau d'administration</a></li>
+                                <li class="nav-item btn btn-dark px-3 pl-3"><a href="">Panneau d'administration</a></li>
                             {% endif %}
 
                         </ul>
