--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,9 +34,9 @@ h2 {
 
 #logo{
   height: 90px;
-  width: 130px;
+  width: 160px;
   margin: 0px;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 
 
@@ -235,14 +235,15 @@ h2 {
     display: inline-block;
     perspective: 1000px;
     transition: all 0.5s ease-out;
+    width: 80%;
   }
 
 
   .card{
     height: auto;
-    width: auto;
+    width: 100%;
     min-height: 400px;
-    min-width: 300px;
+    /* min-width: 300px; */
     position: relative;
     /* height: 100%; */
     /* justify-content: center; */
