--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
 
 
 
-                <nav class="navbar navbar-expand-lg navbar-light bg-info">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <a class="navbar-brand" href="#"><img id="logo" src="{{ asset('img/logo.png') }}" alt="logo flashcards"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
@@ -39,7 +39,7 @@
                       <form class="form-inline my-2 my-lg-0" method="GET" action="{{ path('search') }}">
 
                         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="query" name="query" value="{{ app.request.query.get('query') }}" />
-                        <button type="submit" class="btn btn-outline-success my-2 my-sm-0"><i class="fas fa-search"></i></button>
+                        <button type="submit" class="btn btn-info my-2 my-sm-0"><i class="fas fa-search"></i></button>
 
                       </form>
                     </div>
@@ -72,7 +72,7 @@
                                 </div>
                             </li>
                             {% if is_granted('ROLE_ADMIN') %}
-                                <li class="nav-item btn btn-dark px-3 pl-3"><a href="">Panneau d'administration</a></li>
+                                <li class="nav-item btn btn-dark ml-3"><a href="">Panneau d'administration</a></li>
                             {% endif %}
 
                         </ul>
