--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -63,7 +63,7 @@
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                                     {% if app.user %}
-                                        <a class="dropdown-item" href="">Mon profil</a>
+                                        <a class="dropdown-item" href="{{ path('my_profile_user') }}">Mon profil</a>
                                         <a class="dropdown-item" href="{{ path('app_logout') }}">Se déconnecter</a>
                                     {% else %}
                                         <a class="dropdown-item" href="{{ path('app_login') }}">Se connecter</a>
