bootstrap form inscription et mot de passe oublié

--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Password Reset Email Sent{% endblock %}
+{% block title %}Courriel de réinitialisation du mot de passe envoyé{% endblock %}
 
 {% block body %}
     <p>
