--- a/templates/utilisateur/show.html.twig
+++ b/templates/utilisateur/show.html.twig
@@ -4,19 +4,14 @@
 
 {% block body %}
 
-    <h1>{{ utilisateur.pseudo }}</h1>
-    <p>
-        {{ utilisateur.email }} <br>
-        {# Date d'inscription : {{ utilisateur.dateInscription | date('d-m-Y') }} #}
-    </p>
-
-    <h2>Liste decks</h2>
+    <h1>Liste decks de {{ utilisateur.pseudo }}</h1>
+    
     <p>
         {% for deck in utilisateur.decks %}
             "{{ deck.titre }}" de la catégorie: {{ deck.categorie.nom }}  <a href="{{ path('app_play_deck', {'id': deck.id} ) }}">Jouer avec ce deck</a>   <br>
             
         {% else %}
-            No decks have been found.
+            Aucun deck n'a été trouvé.
         {% endfor %}
     </p>
 
