--- a/public/css/style.css
+++ b/public/css/style.css
@@ -429,6 +429,11 @@ h2 {
     font-size: 15px;
   }
 
+  .deck-delete{
+    display: flex;
+    align-items: flex-start;
+  }
+
 @media screen and (max-width: 900px){
     
     
