--- a/templates/utilisateur/my_profile.html.twig
+++ b/templates/utilisateur/my_profile.html.twig
@@ -32,16 +32,8 @@
     </button>
     <br><br>
     <a class="btn btn-primary" href="{{ path('app_forgot_password_request') }}">Changer votre mot de passe</a>
-
-    <h2>Liste de mes decks</h2>
-    <p>
-        {% for deck in user.decks %}
-            "{{ deck.titre }}" de la catégorie: {{ deck.categorie.nom }}  <a href="{{ path('app_play_deck', {'id': deck.id} ) }}">Jouer avec ce deck</a>   <br>
-            
-        {% else %}
-          Aucun decks n'a été trouvé.
-        {% endfor %}
-    </p>
+    <br><br>
+    <a class="btn btn-primary" href="{{ path('show_utilisateur', {'id': user.id}) }}">Voir mes decks</a>
 
 
 
