--- a/templates/utilisateur/index.html.twig
+++ b/templates/utilisateur/index.html.twig
@@ -4,6 +4,12 @@
 
 {% block body %}
 
+    {% for message in app.flashes('success') %}
+      <div class="success alert-success mt-4">
+        {{ message }}
+      </div>
+    {% endfor %}
+
    <h1>Liste des utilisateurs</h1>
 
     <table class="table table-dark table-striped">
@@ -35,7 +41,7 @@
                     </td>
                     <td data-label="">
     
-                        supprimer
+                        <a class="btn btn-danger" href="{{ path('delete_user', {'id': utilisateur.id}) }}">Supprimer cet utilisateur</a>
                         
                     </td>
                 </tr>
