list decks orphelins

--- a/templates/utilisateur/index.html.twig
+++ b/templates/utilisateur/index.html.twig
@@ -50,7 +50,8 @@
             {% endfor %}
         </tbody>
     </table>
-
+    <a href="{{ path('show_decks_orphans') }}">Voir les decks des utilisateurs supprimés</a>
+    
 
     <script>
         const deleteLinks = document.querySelectorAll('.delete-link');
