--- a/templates/utilisateur/my_profile.html.twig
+++ b/templates/utilisateur/my_profile.html.twig
@@ -36,9 +36,30 @@
     <br><br>
     <a class="btn btn-primary" href="{{ path('show_utilisateur', {'id': user.id}) }}">Voir mes decks</a>
     <br><br>
-    <a class="btn btn-danger" href="{{ path('delete_user', {'id': user.id}) }}">Supprimer mon compte</a>
+    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteAccountModal">
+      Supprimer mon compte
+    </button>
 
+    <div class="modal fade" id="deleteAccountModal" tabindex="-1" role="dialog" aria-labelledby="deleteAccountModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Demande de confimation</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
 
+            {{ form(formDeleteAccount) }}
+        
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
     <div class="modal fade" id="pseudoModal" tabindex="-1" role="dialog" aria-labelledby="pseudoModalLabel" aria-hidden="true">
@@ -52,7 +73,7 @@
             </div>
             <div class="modal-body">
 
-              {{ form(form) }}
+              {{ form(formUpdatePseudo) }}
           
             </div>
             <div class="modal-footer">
